tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__RockCutterLV-AAAAAAAAAAAAAAAAAAAHIA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1824,
  "prerequisites": [
    860
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Rock Cutter is an unbreakable and Silk-touched Mining Device. It will enable you to mine blocks without damaging them, like glass or stone, while it is charged. Uh, Woo?",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lRock Cutter LV",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    860
  ],
  "rewards": [],
  "tasks": []
}
