tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__SeparatingMolecu-AAAAAAAAAAAAAAAAAAAHgQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1921,
  "prerequisites": [
    160
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Many centrifuging recipes are slow. You better upgrade your machines.\n\nThere are many interesting things you can centrifuge outside your normal ore processing or Methane production. Glowstone, Redstone, Soul Sand, Lava, Ashes, Planet Dusts, Compressed Air, etc. Make sure to look around a bit.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lSeparating Molecules",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    160
  ],
  "rewards": [],
  "tasks": []
}
