tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__SmallCoil-AAAAAAAAAAAAAAAAAAAD-w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1019,
  "prerequisites": [
    1016
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Processor Assembly circuit needs some small coils. You can make these a couple different ways.\n\n[note]If you're an overachiever and created SMD Inductors already you may hold 24 in your hand to skip this quest.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lSmall Coil",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1016
  ],
  "rewards": [],
  "tasks": []
}
